Create resource monitoring plugin