@@ -9,9 +9,11 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
     implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
     implementation("org.apache.commons:commons-text:1.9")
+
+    // NOTE: The agent project needs to be published manually once (for build speed)
     implementation("com.github.cs125-illinois.questioner:agent:$version")
 
-    api("com.github.cs125-illinois.jeed:core:2022.3.1")
+    api("com.github.cs125-illinois.jeed:core:2022.3.2a1")
     api("com.github.cs125-illinois:jenisol:2022.3.1a1")
     api("io.kotest:kotest-runner-junit5:4.6.3")
     api("com.google.truth:truth:1.1.3")
@@ -30,7 +32,7 @@ configurations.runtimeClasspath {
     val agentArtifact = resolvedConfiguration.resolvedArtifacts.find { it.name == "agent" }!!
     val agentJar = agentArtifact.file.absolutePath
     tasks.withType(Test::class.java) {
-        jvmArgs("-javaagent:$agentJar")
+        jvmArgs("-javaagent:$agentJar", "--enable-preview")
     }
 }
 publishing {
